Sat Nov 23 00:26:44 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in (KLIB): Change krb516.dll to krb5_16.dll.  [PR#204]

Wed Nov 20 18:32:06 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (KLIB): Change libkrb5.dll to be krb516.dll

Wed Jun 12 00:20:08 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* makefile: Renamed to Makefile.in, so that we can do WIN16/WIN32
 		specializations.  Remove /nologo option for Win32 RFLAGS,
 		since RC apparently doesn't support it.

	* changelo: Renamed to ChangeLog, to make life easier.

Wed Jan 10 23:16:41 1996  Theodore Y. Ts'o  <tytso@dcl>

	* cns.rc: Add an #ifdef for enabling lower case realm (for use
		with DCE).

	* cns.c (kwin_command): When obtaining tickets, we make them
		forwardable by default.  XXX This should really a
		configurable option in the UI.

Sat Jun 10 23:08:57 1995  Tom Yu  (tlyu@dragons-lair)

	* kpasswd.c: krb5_auth_context redefinitions


Mon Jun 5 14:19:51 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kpasswd.c : Use new krb5_adm_connect() calling sequence.

Fri Jun 2 11:45:23 1995 Keith Vetter (keithv@fusion.com)

	* makefile: cleaned up and made consistent with telnet's makefile.

Tue May 30 17:28:04 1995 Keith Vetter (keithv@fusion.com)

	* kpasswd.c: new file for k5 password changing.
	* makefile: added new file to obj list.
	* cns.c: added call to kpasswd stuff.
	* cns.h: added prototype for kpasswd stuff.

Thu Apr 27 11:46:42 1995 Keith Vetter (keithv@fusion.com)

	* cns.c, cns.rc, krbini.h: K5 no longer has conf and realms files
	   but one generic config file. Changed options menu to so we can
	   specify where it lives.

Thu Apr 20 12:17:34 1995 Keith Vetter (keithv@fusion.com)

	* cns.c, tktlist.c, krbini.h: Fixed up #include so it
	   it only relies on krb5.h. We now include winsock 
	   ourselves and we needed to pull one constant out of
	   k5-config.h (INI_KRB_CCACHE).

Tue Apr 18 16:19:07 1995 Keith Vetter (keithv@fusion.com)

	* makefile: better compile flags.
