@@ -1,0 +1,9 @@
+NAME            KRB5
+DESCRIPTION     'KRB5 - Credentials Manager'
+EXETYPE         WINDOWS
+STUB            'WINSTUB.EXE'
+SEGMENTS _TEXT CLASS 'CODE' PRELOAD
+CODE            DISCARDABLE
+DATA PRELOAD MULTIPLE MOVEABLE
+HEAPSIZE 20480
+STACKSIZE 20480
