@@ -1,3 +1,12 @@
+Sat Dec 21 03:13:02 1996  Theodore Y. Ts'o  <tytso@mit.edu>
+
+	* krb5.def: New file, copied from cns.def, with Cygnus'isms #ifdef'ed
+		out.
+	* cns.c: Removed text "Contacting Cygnus Support for support" from
+		the "about" box.
+	* Makefile.in: Change name of cns.exe to be krb5.exe (CNS is a
+		Cygnus trademark)
+
 Sat Nov 23 00:26:44 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* Makefile.in (KLIB): Change krb516.dll to krb5_16.dll.  [PR#204]
